--- a/main.html
+++ b/main.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
-    <h1>INICIO DAMIANCB</h1>
+    <nav class="menu">
+        <img>imagen</img>
+        <p1>Damián Costa Blanco</p1>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">LINKEDIN/GITHUB</a></li>
+        </ul>
+
+
+    </nav>
+
+    <body class="bodyContainer">
+        <p>{
+            Damián Costa blanco
+            }</p>
+    </body>
 </body>
+
 </html>
