background en todo

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <aside class="sidebar">
-            <img src="images/bersker.png" alt="Profile Picture" class="profile-pic">
+            <img src="images/calavera.png" alt="Profile Picture" class="profile-pic">
             <h1>Damián Costa Blanco</h1>
             <nav>
                 <ul>
@@ -40,7 +40,7 @@
   "name": "Damián Costa Blanco",
   "age": 27,
   "country": "Spain",
-  "job": "Full stack developer",
+  "job": "************",
   "email": "damiancb97@gmail.com",
   "currentJob": "Nada"
 }
