Cabecera perfeccionada y about generada

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <script src="https://kit.fontawesome.com/3f957754fb.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
@@ -36,16 +36,22 @@
         </aside>
 
         <main class="content">
-            <pre class="json-code">
-{
-  "name": "Damián Costa Blanco",
-  "age": 27,
-  "country": "Spain",
-  "job": "undefined",
-  "email": "damiancb97@gmail.com",
-  "currentJob": "undefined"
-}
-      </pre>
+            <div class="info">
+                <h2>FreeCodeCamp</h2>
+                <ul class="fccamp">
+                    <li><img src="images/webResponsive.png" alt="Profile Picture" class="profile-pic"></li>
+                    <li><img src="images/webResponsive.png" alt="Profile Picture" class="profile-pic"></li>
+                    <li><img src="images/webResponsive.png" alt="Profile Picture" class="profile-pic"></li>
+                    <li><img src="images/webResponsive.png" alt="Profile Picture" class="profile-pic"></li>
+                </ul>
+                <h2>Cisco</h2>
+                <ul class="cisco">
+                    <li><img src="images/webResponsive.png" alt="Profile Picture" class="profile-pic"></li>
+                    <li><img src="images/webResponsive.png" alt="Profile Picture" class="profile-pic"></li>
+                    <li><img src="images/webResponsive.png" alt="Profile Picture" class="profile-pic"></li>
+                    <li><img src="images/webResponsive.png" alt="Profile Picture" class="profile-pic"></li>
+                </ul>
+            </div>
         </main>
     </div>
 </body>
