--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
             <h1>Damián Costa Blanco</h1>
             <nav>
                 <ul>
-                    <li><a href="main.html">Home</a></li>
-                    <li><a href="about.html">About me</a></li>
+                    <li><a href="/main.html">Home</a></li>
+                    <li><a href="/about.html">About me</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
