--- a/incorporar.html
+++ b/incorporar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
     <script src="https://kit.fontawesome.com/3f957754fb.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/incoporar.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
