--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <aside class="sidebar">
-            <img src="images/calavera.png" alt="Profile Picture" class="profile-pic">
+            <img src="images/yumi.png" alt="Profile Picture" class="profile-pic">
             <h1>Damián Costa Blanco</h1>
             <nav>
                 <ul>
