hover en sidebar, indicar posicion

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <script src="https://kit.fontawesome.com/3f957754fb.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
@@ -17,7 +17,7 @@
             <h1>Damián Costa Blanco</h1>
             <nav>
                 <ul>
-                    <li><a href="/main.html">Home</a></li>
+                    <li><a href="/main.html" class="activo">Home</a></li>
                     <li><a href="/about.html">About me</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
