--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="/main.html">Home</a></li>
-                    <li><a href="/about.html">About me</a></li>
+                    <li><a href="/about.html" class="activo">About me</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
