--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+    <title>Contact</title>
     <script src="https://kit.fontawesome.com/3f957754fb.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
