--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="/main.html" class="activo">Home</a></li>
                     <li><a href="/about.html">About me</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
             <div class="social-links">
